[gd_scene load_steps=4 format=3 uid="uid://dalekcm36228r"]

[ext_resource type="Script" path="res://Scripts/store.gd" id="1_4ax5i"]
[ext_resource type="Theme" uid="uid://h0p28uku3deb" path="res://Themes/button.tres" id="1_q2uso"]
[ext_resource type="LabelSettings" uid="uid://ctd2txar1au8i" path="res://Themes/tittle_ui.tres" id="2_ubrk8"]

[node name="Store" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4ax5i")

[node name="background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="container_holder" type="VBoxContainer" parent="background"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -128.5
offset_right = 128.5
grow_horizontal = 2
grow_vertical = 2

[node name="tittle_ui" type="Label" parent="background/container_holder"]
layout_mode = 2
theme_override_font_sizes/font_size = 128
text = "Loja"
label_settings = ExtResource("2_ubrk8")
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="background/container_holder"]
layout_mode = 2
size_flags_vertical = 6

[node name="characters" type="Button" parent="background/container_holder/VBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme = ExtResource("1_q2uso")
text = "Personagens"

[node name="upgrades" type="Button" parent="background/container_holder/VBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme = ExtResource("1_q2uso")
text = "Upgrades"

[node name="back" type="Button" parent="background/container_holder/VBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme = ExtResource("1_q2uso")
text = "Voltar"

[connection signal="pressed" from="background/container_holder/VBoxContainer/characters" to="." method="_on_characters_pressed"]
[connection signal="pressed" from="background/container_holder/VBoxContainer/upgrades" to="." method="_on_upgrades_pressed"]
[connection signal="pressed" from="background/container_holder/VBoxContainer/back" to="." method="_on_back_pressed"]
